# scanapi

./: .deepsource.toml  .env  .flake8  .gitignore  .gitlint  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  VISION.md  api-scanner.py  api_scanner.py  docs.md  docs_writer.py  mkdocs.yml  pyproject.toml  pytest.ini  requests_builder.py  requirements-dev.txt  requirements.txt  scan.py  scanapi-report.html  scanapi.py  settings.py  setup.py  tasks.py  variable_parser.py
.circleci/: config.yml
.devcontainer/: Dockerfile  NEXT_STEPS.md  README.md  README_INSTRUCTIONS.md  README_SECTION.markdown  SETUP_COMPLETE.md  SUMMARY.md  VISUAL_MAP.md  devcontainer.json  post-create.sh  validate.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  how_to_question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/black/: Dockerfile  entrypoint.sh
.github/actions/changed-files-check/: action.yml
.github/actions/run_examples/: action.yml
.github/actions/setup/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: autoassign-issue-v1.yml  bandit.yml  changelog.yml  close-stale-issues-v1.yml  codeql.yml  first-interaction.yml  flake8.yml  lint.yml  publish-to-production.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  pytest-and-codecov.yml  run-examples.yml  scorecard.yml  validate-pr-title-v1.yml
docs/: api-reference.rst  api.md  changelog.md  cli-reference.rst  conf.py  contributing.md  index.md  index.rst  requirements.txt  usage.rst
docs/_static/css/: custom.css
docs/api/: modules.md  scanapi.evaluators.rst  scanapi.rst  scanapi.tree.rst
docs/contributor-guide/: README.md  changelog-guide.md  contributing.md  dependencies-guide.md  europython-2021.md  first-pull-request.md  index.md  mentored-sprints-at-pycon-india-2021.md  run-scanapi-in-dev-env.md  run-scanapi-locally-manually.md  run-scanapi-locally-with-dev-container.md  sprints.md  tests-guide.md  writing-tests.md
docs/contributor-guide/project-maintenance/: deployment-guide.md
docs/contributor-guide/run-scanapi-dev/: codespaces.md  index.md  local-dev-container.md  local-manually.md
docs/contributor-guide/sprints/: europython-2021.md  index.md  pycon-india-2021.md
docs/stylesheets/: extra.css
docs/user-guide/: index.md
docs/user-guide/docs/: index.md
docs/user-guide/tutorial/: step01.md  step02.md  step03.md  step04.md  step05.md  step06.md  step07.md  step08.md  step09.md  step10.md  step11.md  step12.md  step13.md
documentation/source/: conf.py  index.rst  modules.rst  scanapi.evaluators.rst  scanapi.rst  scanapi.tree.rst  tests.rst  tests.unit.evaluators.rst  tests.unit.rst  tests.unit.tree.rst
examples/cat_api/: .env-sample  .scanapi.yaml  api.yaml  docs.md
examples/json_place_holder/: .env-sample  api.yaml  docs.md
examples/open_weather_map/: .scanapi.yaml  api.yaml  docs.md
overrides/partials/: logo.html
scanapi/: CONTRIBUTING.md  __init__.py  __main__.py  __version__.py  api_node.py  api_tree.py  cli.py  config_loader.py  console.py  convert.py  docs_writer.py  errors.py  exit_code.py  hide_utils.py  main.py  openapi_converter.py  openapi_to_scanapi.py  openapi_to_yaml.py  reporter.py  requests_builder.py  requests_maker.py  scan.py  session.py  settings.py  spec_evaluator.py  std.py  template_render.py  test_status.py  utils.py  variable_parser.py  yaml_loader.py
scanapi/converters/: __init__.py  from_openapi.py
scanapi/evaluators/: __init__.py  code_evaluator.py  rmc.py  rmc_evaluator.py  spec_evaluator.py  string_evaluator.py  test.py
scanapi/refactor/: utils.py
scanapi/refactor/evaluators/: __init__.py  code_evaluator.py  spec_evaluator.py  string_evaluator.py
scanapi/refactor/tree/: __init__.py  endpoint_node.py  request_node.py
scanapi/templates/: console.jinja  html.jinja  markdown.jinja  report.html
scanapi/tools/: curl.py
scanapi/tree/: __init__.py  api_node.py  api_tree.py  endpoint_node.py  node.py  request_node.py  root_node.py  testing_node.py  tree_keys.py
scripts/: make_check.sh
tests/data/: api_invalid_path_include.yaml  api_non_scalar_include.yaml  api_wrong_format_include.yaml  include.txt  include.yaml  invalid_openapi.json  jsonfile.json  not_supported_format.txt  openapi.json  scanapi.yaml
tests/data/convert/: invalid.yaml  no_version_definition.yaml
tests/data/specs/: with_multiple_tests.yaml
tests/functional/features/: call_requests.feature
tests/functional/step_defs/: test_call_requests.py
tests/unit/: factories.py  test_api_tree.py  test_cli.py  test_config_loader.py  test_console.py  test_convert.py  test_group_by_child_endpoints.py  test_hide_utils.py  test_main.py  test_openapi_to_yaml.py  test_reporter.py  test_request_builder.py  test_request_maker.py  test_scan.py  test_session.py  test_settings.py  test_spec_evaluator.py  test_template_render.py  test_tools.py  test_utils.py  test_variable_parser.py  test_yaml_loader.py
tests/unit/evaluators/: test_code_evaluator.py  test_rmc.py  test_rmc_evaluator.py  test_spec_evaluator.py  test_string_evaluator.py
tests/unit/openapi_converter/: test_add_variables_to_path.py  test_convert.py  test_get_api_name.py  test_get_api_target_name.py  test_get_required_params.py  test_get_required_properties_from_schema.py  test_get_security_schemes.py  test_get_spec_version.py  test_get_tests.py  test_init.py  test_validate_openapi_spec_version.py
tests/unit/refactor/: test_utils.py
tests/unit/tree/: test_api_node.py  test_api_tree.py  test_endpoint_node.py  (+3 more)
wiki/: Codespaces-QuickStart.md  Codespaces.md  Deploy.md  Docs-Workflow.md  EuroPython-2021.md  First-Pull-Request.md  Managing-Dependencies.md  Mentored-Sprints-at-PyCon-India-2021.md  Newcomers.md  README.md  Run-ScanAPI-Locally-Manually.md  Run-ScanAPI-Locally-with-Dev-Container.md  Run-ScanAPI-Locally.md  Run-ScanAPI-On-Codespaces.md  Run-ScanAPI-in-Dev-Env.md  Sprints.md
(+64 files in other folders)
