[project]
name = "scanapi"
version = "2.12.0"
description = "Automated Testing and Documentation for your REST API"
authors = [{name = "The ScanAPI Organization", email = "cmaiacd@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["python", "scanapi", "tests", "end2end", "endtoend", "integration tests", "json", "apis", "api rest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "appdirs>=1.4.4,<2.0.0",
    "curlify2>=1.0.1,<2.0.0",
    "MarkupSafe==2.1.2",
    "rich==14.1.0",
    "PyYAML>=6.0.2,<6.1.0",
    "Jinja2>=3.1.0,<3.2.0",
    "click>=8.1.3",
    "httpx>=0.27,<0.29",
    "packaging>=24,<26",
    "restrictedpython>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov==6.2.1",
    "pytest-freezegun==0.4.2",
    "pytest-mock>=3.14.0,<4.0.0",
    "black==25.1.0",
    "sphinx==8.1.3",
    "sphinx_rtd_theme>=0.5,<3.1",
    "pre-commit==4.3.0",
    "isort>=5.13.2,<7.0.0",
    "bandit>=1.7.10,<2.0.0",
    "pytest-it>=0.1.5,<0.2.0",
    "flake8==7.3.0",
    "mypy==1.18.2",
    "types-requests>=2.32.0,<3.0.0",
    "types-PyYAML>=6.0.12,<6.1.0",
    "types-setuptools>=68,<81",
    "requests-mock==1.12.1",
]

[project.scripts]
scanapi = "scanapi:main"

[project.urls]
Homepage = "https://scanapi.dev/"
Repository = "https://github.com/scanapi/scanapi"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
# ignore line length check and warnings
ignore = "E501,W501,E231,W503"
exclude = ".git,__pycache__,docs/source/conf.py,old,build,dist,.venv"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts="--it"

[tool.setuptools.packages.find]
include = ["scanapi*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
