[project]
name = "scanapi"
version = "2.12.0"
description = "Automated Testing and Documentation for your REST API"
authors = [{name = "The ScanAPI Organization", email = "cmaiacd@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["python", "scanapi", "tests", "end2end", "endtoend", "integration tests", "json", "apis", "api rest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "appdirs>=1.4.4,<2.0.0",
    "curlify2>=1.0.1,<3.0.0",
    "MarkupSafe==3.0.3",
    "rich==14.2.0",
    "PyYAML>=6.0.2,<6.1.0",
    "Jinja2>=3.1.0,<3.2.0",
    "click>=8.1.3",
    "httpx>=0.27,<0.29",
    "packaging>=24,<26",
    "restrictedpython>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<10.0.0",
    "pytest-cov==7.0.0",
    "pytest-freezegun==0.4.2",
    "pytest-mock>=3.14.0,<4.0.0",
    "sphinx==8.1.3",
    "sphinx_rtd_theme>=0.5,<3.1",
    "pre-commit==4.5.0",
    "ruff>=0.8.0",
    "bandit>=1.7.10,<2.0.0",
    "pytest-it>=0.1.5,<0.2.0",
    "mypy==1.19.0",
    "types-requests>=2.32.0,<3.0.0",
    "types-PyYAML>=6.0.12,<6.1.0",
    "types-setuptools>=68,<81",
    "requests-mock==1.12.1",
]

[project.scripts]
scanapi = "scanapi:main"

[project.urls]
Homepage = "https://scanapi.dev/"
Repository = "https://github.com/scanapi/scanapi"

[tool.ruff]
line-length = 80
extend-exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.ruff.lint]
extend-select = ["I"]  # Enable isort-compatible import sorting
ignore = ["E501", "E231", "E721", "I001"]  # Replicate flake8 ignores

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts="--it"

[tool.setuptools.packages.find]
include = ["scanapi*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
